# playground

./: CMakeLists.txt
src/: main.cpp
src/gui/: mainwindow.cpp  mainwindow.ui
